APP: Read userdata in userinfo page.
